[package]
name = "pixels-test"
version = "0.1.0"
authors = ["teevik <teemu.vikoren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.2"
winit_input_helper = "0.6.0"
winit = "0.22.0"
rand = "0.7.3"
palette = "0.5.0"
conrod = "0.61.1"
lazy_static = "1.4.0"
