[package]
name = "powpowder"
version = "0.1.0"
authors = ["teevik <teemu.vikoren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
imgui = "0.4"
imgui-wgpu = "0.9"
imgui-winit-support = { version = "0.4", default-features = false, features = ["winit-22"] }
pixels = "0.2.0"
winit_input_helper = "0.6.0"
winit = "0.22.0"
rand = "0.7.3"
palette = "0.5.0"
conrod = "0.61.1"
lazy_static = "1.4.0"
cgmath = "0.17.0"
retain_mut = "0.1.1"
